--- a/ui/usbHidTool.ui
+++ b/ui/usbHidTool.ui
@@ -17,9 +17,9 @@
    <widget class="QComboBox" name="comboBox_hid_devices">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>40</y>
-      <width>171</width>
+      <x>10</x>
+      <y>10</y>
+      <width>771</width>
       <height>41</height>
      </rect>
     </property>
@@ -43,6 +43,9 @@
       <height>181</height>
      </rect>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QTextEdit" name="textEdit_output_str">
     <property name="geometry">
@@ -52,6 +55,9 @@
       <width>291</width>
       <height>181</height>
      </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_send">
@@ -65,6 +71,19 @@
     </property>
     <property name="text">
      <string>Send</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_Open">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>70</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Open</string>
     </property>
    </widget>
   </widget>
@@ -89,8 +108,8 @@
    <slot>hid_devices_actived()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>191</x>
-     <y>91</y>
+     <x>161</x>
+     <y>76</y>
     </hint>
     <hint type="destinationlabel">
      <x>266</x>
@@ -114,9 +133,26 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>pushButton_Open</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>hid_dev_open()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>747</x>
+     <y>115</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>785</x>
+     <y>90</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>hid_devices_actived()</slot>
   <slot>data_send()</slot>
+  <slot>hid_dev_open()</slot>
  </slots>
 </ui>
