--- a/ui/usbHidTool.ui
+++ b/ui/usbHidTool.ui
@@ -229,6 +229,15 @@
                 <property name="text">
                  <string>HEX Send   </string>
                 </property>
+                <property name="checkable">
+                 <bool>true</bool>
+                </property>
+                <property name="checked">
+                 <bool>false</bool>
+                </property>
+                <property name="tristate">
+                 <bool>false</bool>
+                </property>
                </widget>
               </item>
               <item row="0" column="1">
@@ -241,7 +250,11 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit_report_id"/>
+                 <widget class="QLineEdit" name="lineEdit_report_id">
+                  <property name="readOnly">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </item>
@@ -262,7 +275,11 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit_time"/>
+                 <widget class="QLineEdit" name="lineEdit_time">
+                  <property name="inputMethodHints">
+                   <set>Qt::ImhDigitsOnly</set>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </item>
